methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:5: error: type mismatch;
 found   : Unit
 required: Int
    for (i<- 0 to nbPas){
          ^MethodsArgs:10: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-0 to nbPas){
          ^